<resources>
    <string name="app_name">cloudStorage</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_emal">Not a valid emal adress</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="create_password">Password</string>
    <string name="enter_verfCode">Enter verification code sended on choosen email</string>
    <string name="nav_home">Gallery</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_TelegramLogin">Telegram login</string>
    <string name="reg_title">Registration</string>
    <string name="reg_nick">Nick</string>
    <string name="reg_btn">Register</string>
    <string name="reg_passwordCondtion_symbolsLen">• At least 8 characters</string>
    <string name="reg_passwordCondtion_specChars">• Special characters must be used</string>
    <string name="reg_passwordCondtion_Numbers">• Numbers must be used</string>
    <string name="title_activity_launch" translatable="false">LaunchActivity</string>
    <string name="log_title">Login</string>
    <string name="log_email">Email</string>
    <string name="log_password">Password</string>
    <string name="log_btn">Login</string>
    <string name="log_err">Login error. Check your email and password</string>
    <string name="CloudGallery">CloudGallery</string>
    <string name="notif_uploading">Uploading file</string>
    <string name="s_NetworkUsingProfile">Network using profile</string>
    <string name="s_NetworkUsingProfile_Low">Low</string>
    <string name="s_NetworkUsingProfile_Medium">Medium</string>
    <string name="s_NetworkUsingProfile_High">High</string>
    <string name="s_NetworkUsingProfile_Custom">Custom</string>
    <string name="btn_right" translatable="false">></string>
    <string name="btn_left" translatable="false">&lt;</string>
    <string name="set_sessionsTitile">Sessions</string>
    <string name="set_TerminateSession">Terminate Session</string>
    <string name="set_ExitSession">Exit</string>
    <string name="set_currentSession">Current Session</string>
    <string name="Main_UnsynchronizedObjects">Unsynchronized objects</string>
    <string name="u_Photos">photos</string>
    <string name="u_Videos">videos</string>
    <string name="main_sync">Sync objects</string>
    <string name="notif_Syncing">Sync objects</string>
    <string name="btn_verfCode">Submit code</string>
</resources>